# GoTorrent

./: .gitignore  CMakeLists.txt  LibreOffice_25.8.2_Win_x86-64.msi.torrent  Makefile  README.md  a.out  bittorrent_client  decode_bencode  vcpkg.json
bencode/: Makefile  bencode.cpp  bencode.h  bencode_test.cpp  bittorrent_client  main.cpp  run_test  test_runner_executable
client/: client.cpp  client.h  iTorrentSession.h  torrentSession.cpp  torrentSession.h
client/chokingAlgorithm/: IChokingAlgorithm.h  titForTatChoking.h
client/pieceManager/: pieceManager.cpp  pieceManager.h
client/piecePicker/: IPiecePicker.h  piecePicker.cpp  piecePicker.h
client/piecePicker/test/: piecePicker_test.cpp
client/pieceRepository/: IPieceRepository.h  pieceRepository.cpp  pieceRepository.h
client/pieceRepository/test/: pieceRepository_test.cpp
client/test/: torrentSession_test.cpp
client/torrentSession/: ITorrentSession.h  torrentSession.cpp  torrentSession.h
client/torrentSession/test/: torrentSession_test.cpp
client/torrentStorage/: ITorrentStorage.h  diskTorrentStorage.cpp  diskTorrentStorage.h  torrentStorage.cpp
client/torrentStorage/test/: diskTorrentStorage_test.cpp
peer/: peer.cpp  peer.h  peerConnection.cpp  peerConnection.h
peer/test/: iTorrentSession.h  peer_test.cpp
src/: main.cpp
torrent/: torrent.cpp  torrent.h
tracker/: ITracker.h  httpTrackerClient.h  tracker.cpp  tracker.h
